--- a/heartO2monitor/public/stylesheets/physician-signup.css
+++ b/heartO2monitor/public/stylesheets/physician-signup.css
@@ -53,6 +53,7 @@ input[type=text], input[type=email], input[type=password], select {
 .errorDiv {
   color: #dc3545; /* Bootstrap danger color */
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 .errorMessage {
